# guten-morgen

./: .config.toml  .config.toml.example  .env.example  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  ISSUES.md  LICENSE  Makefile  README.md  config.toml.example  pyproject.toml  release-please-config.json  uv.toml
.claude/: settings.json
.claude/commands/: triage-issues.md
.claude/hooks/: block-sensitive-files.sh  check-skill-drift.sh  post-edit-lint.sh  post-edit-test.sh
.claude/skills/gm/: SKILL.md
.claude/skills/new-command/: SKILL.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  cleanup-caches.yml  release.yml
docs/: mcp.md  models.md  testing.md
docs/plans/: 2026-02-17-cache-design.md  2026-02-17-cache-implementation.md  2026-02-17-multi-source-tasks-design.md  2026-02-17-multi-source-tasks-plan.md  2026-02-19-strict-typing-design.md  2026-02-19-strict-typing-plan.md  2026-02-20-morgen-api-features.md  2026-02-23-retry-backoff-design.md  2026-02-23-retry-backoff-plan.md  2026-02-23-xdg-config-design.md  2026-02-23-xdg-config-plan.md  2026-02-24-bearer-token-auth-design.md  2026-02-24-bearer-token-auth-plan.md  2026-02-24-task-fields-design.md  2026-02-24-task-fields-plan.md  2026-02-24-task-lists-design.md  2026-02-24-task-lists-plan.md  2026-03-06-task-project-enrichment-design.md  2026-03-11-mcp-server-design.md
scripts/: check-pii-denylist.sh  check-uv-lock-registry.sh  ci-local.sh  pii-scan.py
src/guten_morgen/: __main__.py  auth.py  cache.py  cli.py  client.py  config.py  errors.py  groups.py  markup.py  mcp_server.py  models.py  output.py  projection.py  retry.py  time_utils.py
src/morgen/: __init__.py  __main__.py  cache.py  cli.py  client.py  config.py  errors.py  groups.py  models.py  output.py  time_utils.py
tests/: conftest.py  test_auth.py  test_cache.py  test_cli_accounts.py  test_cli_availability.py  test_cli_builtin_shadowing.py  test_cli_cache.py  test_cli_calendars.py  test_cli_errors.py  test_cli_events.py  test_cli_groups.py  test_cli_init.py  test_cli_lists.py  test_cli_next.py  test_cli_providers.py  test_cli_retry.py  test_cli_tags.py  test_cli_tasks.py  test_cli_usage.py  test_cli_views.py  test_client.py  test_client_cache.py  test_client_tasks.py  test_config.py  test_groups.py  test_markup.py  test_mcp_server.py  test_models.py  test_output.py  test_projection.py  test_retry.py  test_time_utils.py
tests/fixtures/: account_sample.json  calendar_sample.json  event_sample.json  tag_sample.json  task_sample.json
