[project]
name = "guten-morgen"
version = "0.9.0"
description = "CLI for Morgen calendar and task management — optimised for LLM consumption"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Jeremy Brown"}]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
    "Typing :: Typed",
]
keywords = ["morgen", "calendar", "tasks", "cli", "llm"]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
    "jq>=1.8",
    "tomli>=2.0; python_version < '3.11'",
    "markdownify>=0.14",
    "markdown>=3.7",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov>=5.0"]
dev = [
    "guten-morgen[test]",
    "mypy>=1.10",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "bandit>=1.7",
]

[project.scripts]
gm = "guten_morgen.cli:cli"
guten-morgen = "guten_morgen.cli:cli"

[project.urls]
Repository = "https://github.com/tenfourty/guten-morgen"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/guten_morgen"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "TC", "ANN"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "TC"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",                         # treat all warnings as errors
    "default::DeprecationWarning",   # except third-party deprecations
]

[tool.coverage.run]
source = ["guten_morgen"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B608"]
